[package]
name = "esp32c3_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
embedded-hal = "1.0.0-alpha.9"
embedded-svc = "0.24.0"
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
palette = { version = "0.5.0", default-features = false, features = ["std"] }
postcard = "1.0.4"
serde = "1.0.158"
